update | slicing sidebar-navigation

--- a/src/assets/prepros-6.config
+++ b/src/assets/prepros-6.config
@@ -33,7 +33,10 @@
       "imports": [
         "scss/base/typography.scss",
         "scss/component/header.scss",
-        "scss/component/task-preview-chart.scss"
+        "scss/component/task-preview-chart.scss",
+        "scss/layout/side-navigation.scss",
+        "scss/layout/dashboard-body.scss",
+        "scss/base/config.scss"
       ]
     }
   ],
