add | add page-title component

--- a/src/assets/prepros-6.config
+++ b/src/assets/prepros-6.config
@@ -34,8 +34,27 @@
         "scss/base/typography.scss",
         "scss/component/header.scss",
         "scss/component/task-preview-chart.scss",
+        "scss/component/dashboard-panel.scss",
         "scss/layout/side-navigation.scss",
         "scss/layout/dashboard-body.scss",
+        "scss/base/config.scss"
+      ]
+    },
+    {
+      "path": "scss/base/typography.scss",
+      "imports": [
+        "scss/base/config.scss"
+      ]
+    },
+    {
+      "path": "scss/layout/dashboard-body.scss",
+      "imports": [
+        "scss/base/config.scss"
+      ]
+    },
+    {
+      "path": "scss/layout/side-navigation.scss",
+      "imports": [
         "scss/base/config.scss"
       ]
     }
