update | update custom radio button

--- a/src/assets/prepros-6.config
+++ b/src/assets/prepros-6.config
@@ -35,8 +35,10 @@
         "scss/component/header.scss",
         "scss/component/task-preview-chart.scss",
         "scss/component/dashboard-panel.scss",
+        "scss/component/radio-button.scss",
         "scss/layout/side-navigation.scss",
         "scss/layout/dashboard-body.scss",
+        "scss/layout/task-list.form.scss",
         "scss/base/config.scss"
       ]
     },
