update | task-list layout and style

--- a/src/assets/prepros-6.config
+++ b/src/assets/prepros-6.config
@@ -34,6 +34,7 @@
         "scss/component/task-preview-chart.scss",
         "scss/component/dashboard-panel.scss",
         "scss/component/radio-button.scss",
+        "scss/component/task-list-order.scss",
         "scss/layout/side-navigation.scss",
         "scss/layout/dashboard-body.scss",
         "scss/layout/task-list.form.scss",
@@ -47,6 +48,12 @@
       ]
     },
     {
+      "path": "scss/component/radio-button.scss",
+      "imports": [
+        "scss/base/config.scss"
+      ]
+    },
+    {
       "path": "scss/layout/dashboard-body.scss",
       "imports": [
         "scss/base/config.scss"
@@ -54,6 +61,12 @@
     },
     {
       "path": "scss/layout/side-navigation.scss",
+      "imports": [
+        "scss/base/config.scss"
+      ]
+    },
+    {
+      "path": "scss/layout/task-list.form.scss",
       "imports": [
         "scss/base/config.scss"
       ]
