update | add remove-task-list on task-list-order

--- a/src/assets/prepros-6.config
+++ b/src/assets/prepros-6.config
@@ -11,7 +11,9 @@
   "fileTree": {
     "expandedDirs": [
       "scss/base",
-      "scss/component"
+      "scss/component",
+      "scss",
+      "scss/layout"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
