update | globally set custom radio butto

--- a/src/assets/prepros-6.config
+++ b/src/assets/prepros-6.config
@@ -40,6 +40,7 @@
         "scss/layout/side-navigation.scss",
         "scss/layout/dashboard-body.scss",
         "scss/layout/task-list.form.scss",
+        "scss/layout/task-list-by-category.scss",
         "scss/base/config.scss"
       ]
     },
@@ -51,6 +52,18 @@
     },
     {
       "path": "scss/component/radio-button.scss",
+      "imports": [
+        "scss/base/config.scss"
+      ]
+    },
+    {
+      "path": "scss/component/task-list-order.scss",
+      "imports": [
+        "scss/base/config.scss"
+      ]
+    },
+    {
+      "path": "scss/component/task-preview-chart.scss",
       "imports": [
         "scss/base/config.scss"
       ]
